--- a/translations/kangyur/placeholders/068-014_toh280-being_mindful_of_the_dharma.xml
+++ b/translations/kangyur/placeholders/068-014_toh280-being_mindful_of_the_dharma.xml
@@ -8,34 +8,40 @@
                 <title type="mainTitle" xml:lang="Sa-Ltn">dharmānusmṛti</title>
                 <title type="mainTitle" xml:lang="en">Being Mindful of the Dharma</title>
             </titleStmt>
-            <publicationStmt status="">
+            <editionStmt>
+                <edition>v 0.0.1 <date>2022</date>
+                </edition>
+            </editionStmt>
+            <publicationStmt status="3">
                 <idno xml:id="UT22084-068-014"/>
+                <date/>
             </publicationStmt>
             <sourceDesc>
                 <bibl key="toh280" type="text">
                     <ref>Toh 280</ref>
                     <biblScope>vol.68, ff.55r-55v(pp.109-110)</biblScope>
-                    <location count-pages="2">
-                        <start volume="68" page="111"/>
-                        <end volume="68" page="112"/>
+                    <location work="UT4CZ5369" count-pages="2">
+                        <volume number="68" start-page="109" end-page="110"/>
                     </location>
                     <idno parent-id="O1JC114941JC14668" work="http://read.84000.co/sections"/>
                     <idno source-id="O1JC114941JC11941" work="W22084"/>
                 </bibl>
+                <!-- Atisa section removed
                 <bibl key="toh4521" type="text">
                     <ref>Toh 4521</ref>
                     <biblScope/>
                     <author role="translatorTib">Atisa</author>
-                    <location count-pages="1">
-                        <start volume="213" page="57"/>
-                        <end volume="213" page="57"/>
+                    <location work="UT23703" count-pages="1">
+                        <volume number="213" start-page="55" end-page="55"/>
                     </location>
                     <idno parent-id="O1JC76301JC11278" work="http://read.84000.co/sections"/>
-                <idno source-id="O1JC76301JC112784521" work="http://read.84000.co/sections"/>
-                </bibl>
+                    <idno source-id="O1JC76301JC112784521" work="http://read.84000.co/sections"/>
+                </bibl>-->
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated">Last updated at 16/01/2019 at 10:21:15 by admin</note>
+                <note type="lastUpdated" date-time="2022-12-13T14:20:52.39Z" user="admin">13/12/2022 14:20:52</note>
+                <note type="updated" update="translation-status" value="3" date-time="2022-12-13T14:20:48.151Z" user="line-tofte">3</note>
+                <note type="updated" update="text-version" value="0.0.1" date-time="2022-12-13T14:20:48.151Z" user="line-tofte">0.0.1</note>
             </notesStmt>
         </fileDesc>
     </teiHeader>
