--- a/translations/kangyur/placeholders/068-015_toh281-being_mindful_of_the_community.xml
+++ b/translations/kangyur/placeholders/068-015_toh281-being_mindful_of_the_community.xml
@@ -8,34 +8,40 @@
                 <title type="mainTitle" xml:lang="Sa-Ltn">saṅghānusmṛti</title>
                 <title type="mainTitle" xml:lang="en">Being Mindful of the Community</title>
             </titleStmt>
-            <publicationStmt status="">
+            <editionStmt>
+                <edition>v 0.0.1 <date>2022</date>
+                </edition>
+            </editionStmt>
+            <publicationStmt status="3">
                 <idno xml:id="UT22084-068-015"/>
+                <date/>
             </publicationStmt>
             <sourceDesc>
                 <bibl key="toh281" type="text">
                     <ref>Toh 281</ref>
                     <biblScope>vol.68, ff.55v-55v(pp.110-110)</biblScope>
-                    <location count-pages="1">
-                        <start volume="68" page="112"/>
-                        <end volume="68" page="112"/>
+                    <location work="UT4CZ5369" count-pages="1">
+                        <volume number="68" start-page="110" end-page="110"/>
                     </location>
                     <idno parent-id="O1JC114941JC14668" work="http://read.84000.co/sections"/>
                     <idno source-id="O1JC114941JC11942" work="W22084"/>
                 </bibl>
+                <!-- Atisa section removed
                 <bibl key="toh4522" type="text">
                     <ref>Toh 4522</ref>
                     <biblScope/>
                     <author role="translatorTib">Atisa</author>
-                    <location count-pages="1">
-                        <start volume="213" page="58"/>
-                        <end volume="213" page="58"/>
+                    <location work="UT23703" count-pages="1">
+                        <volume number="213" start-page="56" end-page="56"/>
                     </location>
                     <idno parent-id="O1JC76301JC11278" work="http://read.84000.co/sections"/>
-                <idno source-id="O1JC76301JC112784522" work="http://read.84000.co/sections"/>
-                </bibl>
+                    <idno source-id="O1JC76301JC112784522" work="http://read.84000.co/sections"/>
+                </bibl>-->
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated">Last updated at 16/01/2019 at 10:21:13 by admin</note>
+                <note type="lastUpdated" date-time="2022-12-13T14:22:34.475Z" user="admin">13/12/2022 14:22:34</note>
+                <note type="updated" update="translation-status" value="3" date-time="2022-12-13T14:22:30.163Z" user="line-tofte">3</note>
+                <note type="updated" update="text-version" value="0.0.1" date-time="2022-12-13T14:22:30.163Z" user="line-tofte">0.0.1</note>
             </notesStmt>
         </fileDesc>
     </teiHeader>
