--- a/translations/kangyur/placeholders/068-015_toh281-being_mindful_of_the_community.xml
+++ b/translations/kangyur/placeholders/068-015_toh281-being_mindful_of_the_community.xml
@@ -4,12 +4,14 @@
     <teiHeader>
         <fileDesc>
             <titleStmt>
-                <title type="mainTitle" xml:lang="Bo-Ltn">dge 'dun rjes su dran pa/</title>
-                <title type="mainTitle" xml:lang="Sa-Ltn">saṅghānusmṛti</title>
                 <title type="mainTitle" xml:lang="en">Being Mindful of the Community</title>
+                <title type="mainTitle" xml:lang="Sa-Ltn">saṅghānusmṛti</title>
+                <title type="mainTitle" xml:lang="Bo-Ltn">dge 'dun rjes su dran pa/</title>
+                <author role="translatorMain" ref="eft:team-40"/>
+                <author role="translatorEng" ref="eft:person-139">John Canti</author>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.1 <date>2022</date>
+                <edition>v 0.0.2 <date>2022</date>
                 </edition>
             </editionStmt>
             <publicationStmt status="3">
@@ -39,9 +41,10 @@
                 </bibl>-->
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated" date-time="2022-12-13T14:22:34.475Z" user="admin">13/12/2022 14:22:34</note>
+                <note type="lastUpdated" date-time="2022-12-13T14:23:07.251Z" user="admin">13/12/2022 14:23:07</note>
                 <note type="updated" update="translation-status" value="3" date-time="2022-12-13T14:22:30.163Z" user="line-tofte">3</note>
                 <note type="updated" update="text-version" value="0.0.1" date-time="2022-12-13T14:22:30.163Z" user="line-tofte">0.0.1</note>
+                <note type="updated" update="text-version" value="0.0.2" date-time="2022-12-13T14:23:05.77Z" user="line-tofte">Auto (update-contributors)</note>
             </notesStmt>
         </fileDesc>
     </teiHeader>
