--- a/translations/kangyur/placeholders/091-010_toh613,989-the_incantation_of_the_goddess_cunda.xml
+++ b/translations/kangyur/placeholders/091-010_toh613,989-the_incantation_of_the_goddess_cunda.xml
@@ -6,22 +6,26 @@
             <titleStmt>
                 <title type="mainTitle" xml:lang="Bo-Ltn">lha mo skul byed ma'i gzungs/</title>
                 <title type="mainTitle" xml:lang="Sa-Ltn">cundadevīdhāraṇī</title>
-                <title type="mainTitle" xml:lang="en">The Incantation of the Goddess Cundā</title>
+                <title type="mainTitle" xml:lang="en">The Dhāraṇī of the Goddess Cundā</title>
                 <title type="otherTitle" xml:lang="Bo-Ltn">'phags pa lha mo skul byed ma zhes bya ba'i gzungs/</title>
                 <title type="otherTitle" xml:lang="Sa-Ltn">āryacundadevīnāmadhāraṇī</title>
                 <title type="otherTitle" xml:lang="Bo-Ltn">'phags pa lha mo skul byed ma zhes bya ba'i gzungs/</title>
                 <title type="otherTitle" xml:lang="Sa-Ltn">āryacundadevīnāmadhāraṇī</title>
             </titleStmt>
-            <publicationStmt status="">
+            <editionStmt>
+                <edition>v 0.0.1 <date>2022</date>
+                </edition>
+            </editionStmt>
+            <publicationStmt status="3">
                 <idno xml:id="UT22084-091-010"/>
+                <date/>
             </publicationStmt>
             <sourceDesc>
                 <bibl key="toh613" type="text">
                     <ref>Toh 613</ref>
                     <biblScope>vol.91, ff.46v-47r(pp.92-93)</biblScope>
-                    <location count-pages="2">
-                        <start volume="91" page="94"/>
-                        <end volume="91" page="95"/>
+                    <location work="UT4CZ5369" count-pages="2">
+                        <volume number="91" start-page="92" end-page="93"/>
                     </location>
                     <idno parent-id="O1JC114941JC21415" work="http://read.84000.co/sections"/>
                     <idno source-id="O1JC114941JC12347" work="W22084"/>
@@ -29,16 +33,15 @@
                 <bibl key="toh989" type="text">
                     <ref>Toh 989</ref>
                     <biblScope>vol.101, ff.143r-143v(pp.285-286)</biblScope>
-                    <location count-pages="2">
-                        <start volume="101" page="287"/>
-                        <end volume="101" page="288"/>
+                    <location work="UT4CZ5369" count-pages="2">
+                        <volume number="101" start-page="285" end-page="286"/>
                     </location>
                     <idno parent-id="O1JC114941JC20568" work="http://read.84000.co/sections"/>
                     <idno source-id="O1JC114941JC12752" work="W22084"/>
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated">Last updated at 23/01/2019 at 09:07:15 by admin</note>
+                <note type="lastUpdated" date-time="2022-12-13T14:30:45.427Z" user="admin">13/12/2022 14:30:45</note>    <note type="updated" update="translation-status" value="3" date-time="2022-12-13T14:30:41.181Z" user="line-tofte">3</note>    <note type="updated" update="text-version" value="0.0.1" date-time="2022-12-13T14:30:41.181Z" user="line-tofte">0.0.1</note>
             </notesStmt>
         </fileDesc>
     </teiHeader>
