--- a/translations/kangyur/placeholders/091-015_toh618,967-the_sutra_of_taking_back_vitality.xml
+++ b/translations/kangyur/placeholders/091-015_toh618,967-the_sutra_of_taking_back_vitality.xml
@@ -13,16 +13,20 @@
                 <title type="otherTitle" xml:lang="Bo-Ltn">'phags pa mdangs phyir 'phrog pa zhes bya ba'i mdo/</title>
                 <title type="otherTitle" xml:lang="Sa-Ltn">āryaujaḥpratyañjanasūtra</title>
             </titleStmt>
-            <publicationStmt status="">
+            <editionStmt>
+                <edition>v 0.0.1 <date>2022</date>
+                </edition>
+            </editionStmt>
+            <publicationStmt status="3">
                 <idno xml:id="UT22084-091-015"/>
+                <date/>
             </publicationStmt>
             <sourceDesc>
                 <bibl key="toh618" type="text">
                     <ref>Toh 618</ref>
                     <biblScope>vol.91, ff.58v-59r(pp.116-117)</biblScope>
-                    <location count-pages="2">
-                        <start volume="91" page="118"/>
-                        <end volume="91" page="119"/>
+                    <location work="UT4CZ5369" count-pages="2">
+                        <volume number="91" start-page="116" end-page="117"/>
                     </location>
                     <idno parent-id="O1JC114941JC21415" work="http://read.84000.co/sections"/>
                     <idno source-id="O1JC114941JC12352" work="W22084"/>
@@ -30,16 +34,15 @@
                 <bibl key="toh967" type="text">
                     <ref>Toh 967</ref>
                     <biblScope>vol.101, ff.83v-84r(pp.166-167)</biblScope>
-                    <location count-pages="2">
-                        <start volume="101" page="168"/>
-                        <end volume="101" page="169"/>
+                    <location work="UT4CZ5369" count-pages="2">
+                        <volume number="101" start-page="166" end-page="167"/>
                     </location>
                     <idno parent-id="O1JC114941JC20568" work="http://read.84000.co/sections"/>
                     <idno source-id="O1JC114941JC12730" work="W22084"/>
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated">Last updated at 23/01/2019 at 09:06:52 by admin</note>
+                <note type="lastUpdated" date-time="2022-12-13T14:32:08.735Z" user="admin">13/12/2022 14:32:08</note>    <note type="updated" update="translation-status" value="3" date-time="2022-12-13T14:32:04.446Z" user="line-tofte">3</note>    <note type="updated" update="text-version" value="0.0.1" date-time="2022-12-13T14:32:04.446Z" user="line-tofte">0.0.1</note>
             </notesStmt>
         </fileDesc>
     </teiHeader>
