--- a/translations/kangyur/placeholders/091-015_toh618,967-the_sutra_of_taking_back_vitality.xml
+++ b/translations/kangyur/placeholders/091-015_toh618,967-the_sutra_of_taking_back_vitality.xml
@@ -4,17 +4,17 @@
     <teiHeader>
         <fileDesc>
             <titleStmt>
-                <title type="mainTitle" xml:lang="Bo-Ltn">mdangs 'phrog pa'i mdo/</title>
-                <title type="mainTitle" xml:lang="Sa-Ltn">ojaḥpratyañjanasūtra</title>
                 <title type="mainTitle" xml:lang="en">The Sūtra of Taking Back Vitality</title>
-                <title type="otherTitle" xml:lang="Bo-Ltn">'phags pa mdangs phyir 'phrog pa zhes bya ba'i mdo/</title>
+                <title type="mainTitle" xml:lang="Sa-Ltn">ojaḥpratyañjanasūtra</title>
+                <title type="mainTitle" xml:lang="Bo-Ltn">mdangs 'phrog pa'i mdo/</title>
                 <title type="otherTitle" xml:lang="Sa-Ltn">āryaujaḥpratyañjanasūtra</title>
                 <title type="otherTitle" xml:lang="Bo-Ltn">mdangs phyir 'phrog pa'i mdo/</title>
                 <title type="otherTitle" xml:lang="Bo-Ltn">'phags pa mdangs phyir 'phrog pa zhes bya ba'i mdo/</title>
-                <title type="otherTitle" xml:lang="Sa-Ltn">āryaujaḥpratyañjanasūtra</title>
+                <author role="translatorMain" ref="eft:team-40"/>
+                <author role="translatorEng" ref="eft:person-74">Ryan Damron</author>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.1 <date>2022</date>
+                <edition>v 0.0.2 <date>2022</date>
                 </edition>
             </editionStmt>
             <publicationStmt status="3">
@@ -42,7 +42,10 @@
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated" date-time="2022-12-13T14:32:08.735Z" user="admin">13/12/2022 14:32:08</note>    <note type="updated" update="translation-status" value="3" date-time="2022-12-13T14:32:04.446Z" user="line-tofte">3</note>    <note type="updated" update="text-version" value="0.0.1" date-time="2022-12-13T14:32:04.446Z" user="line-tofte">0.0.1</note>
+                <note type="lastUpdated" date-time="2022-12-13T14:33:22.358Z" user="admin">13/12/2022 14:33:22</note>
+                <note type="updated" update="translation-status" value="3" date-time="2022-12-13T14:32:04.446Z" user="line-tofte">3</note>
+                <note type="updated" update="text-version" value="0.0.1" date-time="2022-12-13T14:32:04.446Z" user="line-tofte">0.0.1</note>
+                <note type="updated" update="text-version" value="0.0.2" date-time="2022-12-13T14:33:20.883Z" user="line-tofte">Auto (update-contributors)</note>
             </notesStmt>
         </fileDesc>
     </teiHeader>
