--- a/translations/kangyur/placeholders/091-016_toh619,1008-the_spell_for_cleansing_the_eyes.xml
+++ b/translations/kangyur/placeholders/091-016_toh619,1008-the_spell_for_cleansing_the_eyes.xml
@@ -12,16 +12,20 @@
                 <title type="otherTitle" xml:lang="Bo-Ltn">'phags pa mig rnam par sbyong ba zhes bya ba'i rig sngags/</title>
                 <title type="otherTitle" xml:lang="Sa-Ltn">āryacakṣurviśodhana­nāmavidyāmantra</title>
             </titleStmt>
-            <publicationStmt status="">
+            <editionStmt>
+                <edition>v 0.0.1 <date>2022</date>
+                </edition>
+            </editionStmt>
+            <publicationStmt status="3">
                 <idno xml:id="UT22084-091-016"/>
+                <date/>
             </publicationStmt>
             <sourceDesc>
                 <bibl key="toh619" type="text">
                     <ref>Toh 619</ref>
                     <biblScope>vol.91, ff.59r-60v(pp.117-120)</biblScope>
-                    <location count-pages="4">
-                        <start volume="91" page="119"/>
-                        <end volume="91" page="122"/>
+                    <location work="UT4CZ5369" count-pages="4">
+                        <volume number="91" start-page="117" end-page="120"/>
                     </location>
                     <idno parent-id="O1JC114941JC21415" work="http://read.84000.co/sections"/>
                     <idno source-id="O1JC114941JC12353" work="W22084"/>
@@ -29,16 +33,15 @@
                 <bibl key="toh1008" type="text">
                     <ref>Toh 1008</ref>
                     <biblScope>vol.101, ff.176v-177v(pp.352-354)</biblScope>
-                    <location count-pages="3">
-                        <start volume="101" page="354"/>
-                        <end volume="101" page="356"/>
+                    <location work="UT4CZ5369" count-pages="3">
+                        <volume number="101" start-page="352" end-page="354"/>
                     </location>
                     <idno parent-id="O1JC114941JC20568" work="http://read.84000.co/sections"/>
                     <idno source-id="O1JC114941JC12771" work="W22084"/>
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated">Last updated at 23/01/2019 at 09:07:36 by admin</note>
+                <note type="lastUpdated" date-time="2022-12-13T14:34:22.683Z" user="admin">13/12/2022 14:34:22</note>    <note type="updated" update="translation-status" value="3" date-time="2022-12-13T14:34:18.421Z" user="line-tofte">3</note>    <note type="updated" update="text-version" value="0.0.1" date-time="2022-12-13T14:34:18.421Z" user="line-tofte">0.0.1</note>
             </notesStmt>
         </fileDesc>
     </teiHeader>
