--- a/translations/kangyur/placeholders/091-016_toh619,1008-the_spell_for_cleansing_the_eyes.xml
+++ b/translations/kangyur/placeholders/091-016_toh619,1008-the_spell_for_cleansing_the_eyes.xml
@@ -4,16 +4,16 @@
     <teiHeader>
         <fileDesc>
             <titleStmt>
-                <title type="mainTitle" xml:lang="Bo-Ltn">mig rnam par sbyong ba'i rig sngags/</title>
-                <title type="mainTitle" xml:lang="Sa-Ltn">cakṣurviśodhanavidyāmantra</title>
                 <title type="mainTitle" xml:lang="en">The Spell for Cleansing the Eyes</title>
-                <title type="otherTitle" xml:lang="Bo-Ltn">'phags pa mig rnam par sbyong ba zhes bya ba'i rig sngags/</title>
+                <title type="mainTitle" xml:lang="Sa-Ltn">cakṣurviśodhanavidyāmantra</title>
+                <title type="mainTitle" xml:lang="Bo-Ltn">mig rnam par sbyong ba'i rig sngags/</title>
                 <title type="otherTitle" xml:lang="Sa-Ltn">āryacakṣurviśodhana­nāmavidyāmantra</title>
                 <title type="otherTitle" xml:lang="Bo-Ltn">'phags pa mig rnam par sbyong ba zhes bya ba'i rig sngags/</title>
-                <title type="otherTitle" xml:lang="Sa-Ltn">āryacakṣurviśodhana­nāmavidyāmantra</title>
+                <author role="translatorMain" ref="eft:team-40"/>
+                <author role="translatorEng" ref="eft:person-74">Ryan Damron</author>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.1 <date>2022</date>
+                <edition>v 0.0.2 <date>2022</date>
                 </edition>
             </editionStmt>
             <publicationStmt status="3">
@@ -41,7 +41,10 @@
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated" date-time="2022-12-13T14:34:22.683Z" user="admin">13/12/2022 14:34:22</note>    <note type="updated" update="translation-status" value="3" date-time="2022-12-13T14:34:18.421Z" user="line-tofte">3</note>    <note type="updated" update="text-version" value="0.0.1" date-time="2022-12-13T14:34:18.421Z" user="line-tofte">0.0.1</note>
+                <note type="lastUpdated" date-time="2022-12-13T14:34:53.904Z" user="admin">13/12/2022 14:34:53</note>
+                <note type="updated" update="translation-status" value="3" date-time="2022-12-13T14:34:18.421Z" user="line-tofte">3</note>
+                <note type="updated" update="text-version" value="0.0.1" date-time="2022-12-13T14:34:18.421Z" user="line-tofte">0.0.1</note>
+                <note type="updated" update="text-version" value="0.0.2" date-time="2022-12-13T14:34:52.432Z" user="line-tofte">Auto (update-contributors)</note>
             </notesStmt>
         </fileDesc>
     </teiHeader>
