--- a/translations/kangyur/placeholders/056-008_toh140,525,914-the_incantation_for_achieving_the_boundless_gate.xml
+++ b/translations/kangyur/placeholders/056-008_toh140,525,914-the_incantation_for_achieving_the_boundless_gate.xml
@@ -25,10 +25,10 @@
                 <consultant role="advisor" ref="eft:person-418">Wangchuk Dorje Negi</consultant>
             </titleStmt>
     <editionStmt>
-                <edition>v 0.0.6 <date>2021</date>
+                <edition>v 0.0.7 <date>2021</date>
                 </edition>
             </editionStmt>
-            <publicationStmt status="3">
+            <publicationStmt status="2.h">
                 <idno xml:id="UT22084-056-008"/>
                 <date/>
             </publicationStmt>
@@ -62,7 +62,7 @@
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated" date-time="2022-07-07T08:20:06.289Z" user="admin">07/07/2022 08:20:06</note>
+                <note type="lastUpdated" date-time="2022-12-14T13:30:55.228Z" user="admin">14/12/2022 13:30:55</note>
                 <note type="updated" update="translation-status" value="4" date-time="2021-08-04T12:41:38.803Z" user="line-tofte">4</note>
                 <note type="updated" update="text-version" value="0.0.1" date-time="2021-08-04T12:41:38.803Z" user="line-tofte">0.0.1</note>
                 <note type="updated" update="translation-status" value="" date-time="2021-09-16T13:08:20.545Z" user="line-tofte"/>
@@ -73,6 +73,8 @@
                 <note type="updated" update="text-version" value="0.0.4" date-time="2022-07-07T08:16:46.445Z" user="line-tofte">Auto (update-publication-status)</note>
                 <note type="updated" update="text-version" value="0.0.5" date-time="2022-07-07T08:17:52.127Z" user="line-tofte">Auto (update-contributors)</note>
                 <note type="updated" update="text-version" value="0.0.6" date-time="2022-07-07T08:19:58.723Z" user="line-tofte">Auto (update-contributors)</note>
+                <note type="updated" update="translation-status" value="2.h" date-time="2022-12-14T13:30:49.474Z" user="line-tofte">2.h</note>
+                <note type="updated" update="text-version" value="0.0.7" date-time="2022-12-14T13:30:49.474Z" user="line-tofte">Auto (update-publication-status)</note>
             </notesStmt>
         </fileDesc>
     </teiHeader>
