--- a/translations/kangyur/placeholders/064-006_toh236-the_tenth_chapter_from_amongst_the_ten_thousand_chapters_of_the_sutra_on_the_heroic_way.xml
+++ b/translations/kangyur/placeholders/064-006_toh236-the_tenth_chapter_from_amongst_the_ten_thousand_chapters_of_the_sutra_on_the_heroic_way.xml
@@ -15,11 +15,11 @@
                 <sponsor ref="eft:sponsor-219">anonymous</sponsor>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.11 <date>2020</date>
+                <edition>v 0.0.12 <date>2020</date>
                 </edition>
             </editionStmt>
 
-            <publicationStmt status="3">
+            <publicationStmt status="2.h">
                 <idno xml:id="UT22084-064-006"/>
                 <date/>
             </publicationStmt>
@@ -35,7 +35,7 @@
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated" date-time="2021-12-24T05:38:12.001Z" user="cabie-sim">24/12/2021 05:38:12</note>
+                <note type="lastUpdated" date-time="2022-12-14T14:27:21.514Z" user="admin">14/12/2022 14:27:21</note>
 <note type="updated" update="text-version" value="0.0.1" date-time="2020-01-12T19:39:15.473Z" user="john">0.0.1</note>
 <note type="updated" update="translation-status" value="1" date-time="2020-01-12T19:39:15.473Z" user="john">1</note>
 <note type="updated" update="translation-status" value="0" date-time="2020-01-12T19:39:33.331Z" user="john"/>
@@ -52,6 +52,8 @@
     <note type="updated" update="text-version" value="0.0.10" date-time="2021-12-24T05:20:55.121Z" user="cabie-sim">Auto (update-sponsorship)</note>
 
     <note type="updated" update="text-version" value="0.0.11" date-time="2021-12-24T05:38:07.88Z" user="cabie-sim">Auto (update-sponsorship)</note>
+    <note type="updated" update="translation-status" value="2.h" date-time="2022-12-14T14:27:15.693Z" user="line-tofte">2.h</note>
+    <note type="updated" update="text-version" value="0.0.12" date-time="2022-12-14T14:27:15.693Z" user="line-tofte">Auto (update-publication-status)</note>
 </notesStmt>
         </fileDesc>
     </teiHeader>
