--- a/translations/kangyur/translations/072-007_toh307-sutra_on_the_limits_of_lifes_duration.xml
+++ b/translations/kangyur/translations/072-007_toh307-sutra_on_the_limits_of_lifes_duration.xml
@@ -26,7 +26,7 @@
                 <editor role="finalReviewer" ref="contributors.xml#person-250">Rory Lindsay</editor>
             </titleStmt>
             <editionStmt>
-                <edition>v 1.0.9 <date>2021</date>
+                <edition>v 1.0.10 <date>2021</date>
                 </edition>
             </editionStmt>
             <publicationStmt status="1">
@@ -62,7 +62,7 @@
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated" date-time="2022-06-29T16:10:15.892Z" user="admin">29/06/2022 16:10:15</note>
+                <note type="lastUpdated" date-time="2022-12-14T14:36:03.261Z" user="admin">14/12/2022 14:36:03</note>
                 <note type="updated" update="text-version" value="v 0.0.1" date-time="2019-12-20T12:56:48.575Z" user="admin">Automated version
                     increment</note>
                 <note type="updated" update="translation-status" value="2.d" date-time="2020-01-28T06:19:24.922Z" user="mike">2.d</note>
@@ -105,6 +105,7 @@
                 <note type="updated" update="text-version" value="1.0.7" date-time="2021-09-09T18:42:57.904Z" user="celso">activated pending links</note>
                 <note type="updated" update="text-version" value="1.0.8" date-time="2022-06-27T10:06:48.1Z" user="admin">Auto (script-increment-version-published)</note>
                 <note type="updated" update="text-version" value="1.0.9" date-time="2022-06-29T16:10:08.343Z" user="cabie-sim">Auto (update-titles)</note>
+                <note type="updated" update="text-version" value="1.0.10" date-time="2022-12-14T14:36:00.272Z" user="martina-cotter">Updated title of Toh 339 to "Transformation of Karma."</note>
             </notesStmt>
         </fileDesc>
     </teiHeader>
@@ -316,7 +317,7 @@
                             of Life</title>, a rather late Tibetan commentary by Choné Lama Drakpa Shedrup (<foreign xml:lang="Bo-Ltn">co ne bla ma
                             grags pa bshad sgrub</foreign>, 1675–1748).<note place="end" xml:id="UT22084-072-007-39"> For detailed information on
                             Drakpa Shedrup, see <ref target="https://treasuryoflives.org/biographies/view/Drakpa-Shedrub/2931">Treasury of
-                            Lives</ref>. The larger first part of this commentary contains a concise, summarized version (<foreign xml:lang="Bo-Ltn" type="term">don bsdus</foreign>) of the two <title xml:lang="Sa-Ltn">Karma­vibhaṅga­sūtras</title> (<title xml:lang="en">Exposition of Karma</title>, <ref rend="pending" target="https://read.84000.co/translation/toh338.html">Toh 338</ref> and <ref target="https://read.84000.co/translation/toh339.html">Toh 339</ref>; see Galasek-Hul and Lama
+                            Lives</ref>. The larger first part of this commentary contains a concise, summarized version (<foreign xml:lang="Bo-Ltn" type="term">don bsdus</foreign>) of the two <title xml:lang="Sa-Ltn">Karma­vibhaṅga­sūtras</title> (<ref rend="pending" target="https://read.84000.co/translation/toh338.html">Toh 338</ref> and <ref target="https://read.84000.co/translation/toh339.html">Toh 339</ref>; see Galasek-Hul and Lama
                             Kunga Thartse Rinpoche 2021a and forthcoming), which largely follows the structure of Toh 339. The second part of Drakpa
                             Shedrup’s text contains the commentary on<title xml:lang="en"> The Sūtra on the Limits of Life</title>. While Drakpa
                             Shedrup’s commentary does not add any new information that is not available from the sūtra itself, it does stand out for
@@ -1715,7 +1716,7 @@
                     </title> (<title xml:lang="Sa-Ltn">Arthaviniścayadharmaparyāya</title>, Toh 317). 84000: Translating the Words of the
                         Buddha, 2021.</bibl>
                     <bibl xml:id="UT22084-072-007-361">Galasek-Hul, Bruno, and Lama Kunga Thartse Rinpoche (2021). <title xml:lang="en">
-                            <ref target="https://read.84000.co/translation/toh339.html">Exposition of Karma</ref>
+                            <ref target="https://read.84000.co/translation/toh339.html">Transformation of Karma</ref>
                         </title> (<title xml:lang="Sa-Ltn">Karmavibhaṅga</title>, Toh 339). 84000: Translating the Words of the Buddha, 2021.</bibl>
                     <bibl xml:id="UT22084-072-007-362">———(forthcoming). <title xml:lang="en">
                             <ref rend="pending" target="https://read.84000.co/translation/toh338.html">Exposition of Karma</ref>
