--- a/translations/kangyur/placeholders/072-019_toh319-the_marvelous_dharma_discourse.xml
+++ b/translations/kangyur/placeholders/072-019_toh319-the_marvelous_dharma_discourse.xml
@@ -16,10 +16,10 @@
                 <editor role="proofreader" ref="eft:person-371">Daigengna Duoer</editor>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.4 <date>2022</date>
+                <edition>v 0.0.5 <date>2022</date>
                 </edition>
             </editionStmt>
-            <publicationStmt status="3">
+            <publicationStmt status="2.h">
                 <idno xml:id="UT22084-072-019"/>
                 <date/>
             </publicationStmt>
@@ -35,13 +35,15 @@
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated" date-time="2022-10-06T09:08:31.688Z" user="admin">06/10/2022 09:08:31</note>
+                <note type="lastUpdated" date-time="2022-12-14T15:11:04.14Z" user="admin">14/12/2022 15:11:04</note>
                 <note type="updated" update="translation-status" value="4" date-time="2022-03-08T09:50:50.939Z" user="line-tofte">4</note>
                 <note type="updated" update="text-version" value="0.0.1" date-time="2022-03-08T09:50:50.939Z" user="line-tofte">0.0.1</note>
                 <note type="updated" update="translation-status" value="3" date-time="2022-10-06T09:06:35.397Z" user="line-tofte">3</note>
                 <note type="updated" update="text-version" value="0.0.2" date-time="2022-10-06T09:06:35.397Z" user="line-tofte">Auto (update-publication-status)</note>
                 <note type="updated" update="text-version" value="0.0.3" date-time="2022-10-06T09:07:17.769Z" user="line-tofte">Auto (update-contributors)</note>
                 <note type="updated" update="text-version" value="0.0.4" date-time="2022-10-06T09:08:29.584Z" user="line-tofte">Auto (update-contributors)</note>
+                <note type="updated" update="translation-status" value="2.h" date-time="2022-12-14T15:10:58.351Z" user="line-tofte">2.h</note>
+                <note type="updated" update="text-version" value="0.0.5" date-time="2022-12-14T15:10:58.351Z" user="line-tofte">Auto (update-publication-status)</note>
             </notesStmt>
         </fileDesc>
     </teiHeader>
