--- a/translations/kangyur/placeholders/061-020_toh200-the_sutra_on_concordance_with_the_world.xml
+++ b/translations/kangyur/placeholders/061-020_toh200-the_sutra_on_concordance_with_the_world.xml
@@ -12,11 +12,11 @@
                 <author role="translatorMain" ref="contributors.xml#team-27"/>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.2 <date>2019</date>
+                <edition>v 0.0.3 <date>2019</date>
                 </edition>
             </editionStmt>
 
-            <publicationStmt status="3">
+            <publicationStmt status="2.h">
                 <idno xml:id="UT22084-061-020"/>
                 <date/>
             </publicationStmt>
@@ -32,10 +32,10 @@
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated" date-time="2019-12-20T13:08:37.587Z" user="admin">20/12/2019 13:08:37</note>
+                <note type="lastUpdated" date-time="2022-12-14T15:32:23.267Z" user="admin">14/12/2022 15:32:23</note>
             
 <note type="updated" update="text-version" value="v 0.0.1" date-time="2019-12-20T12:56:48.575Z" user="admin">Automated version increment</note>
-    <note type="updated" update="text-version" value="0.0.2" date-time="2020-10-25T10:16:42.43Z" user="john">added a note about the text</note>
+    <note type="updated" update="text-version" value="0.0.2" date-time="2020-10-25T10:16:42.43Z" user="john">added a note about the text</note>    <note type="updated" update="translation-status" value="2.h" date-time="2022-12-14T15:32:17.484Z" user="line-tofte">2.h</note>    <note type="updated" update="text-version" value="0.0.3" date-time="2022-12-14T15:32:17.484Z" user="line-tofte">Auto (update-publication-status)</note>
             </notesStmt>
         </fileDesc>
     </teiHeader>
