--- a/translations/kangyur/placeholders/068-009_toh275-the_sutra_on_buddhahood.xml
+++ b/translations/kangyur/placeholders/068-009_toh275-the_sutra_on_buddhahood.xml
@@ -12,11 +12,11 @@
                 <author role="translatorMain" ref="contributors.xml#team-27"/>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.1 <date>2019</date>
+                <edition>v 0.0.2 <date>2019</date>
                 </edition>
             </editionStmt>
 
-            <publicationStmt status="3">
+            <publicationStmt status="2.h">
                 <idno xml:id="UT22084-068-009"/>
                 <date/>
             </publicationStmt>
@@ -32,9 +32,9 @@
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated" date-time="2019-12-20T12:58:44.337Z" user="admin">20/12/2019 12:58:44</note>
+                <note type="lastUpdated" date-time="2022-12-14T15:41:32.447Z" user="admin">14/12/2022 15:41:32</note>
             
-<note type="updated" update="text-version" value="v 0.0.1" date-time="2019-12-20T12:56:48.575Z" user="admin">Automated version increment</note>
+<note type="updated" update="text-version" value="v 0.0.1" date-time="2019-12-20T12:56:48.575Z" user="admin">Automated version increment</note>    <note type="updated" update="translation-status" value="2.h" date-time="2022-12-14T15:41:26.655Z" user="line-tofte">2.h</note>    <note type="updated" update="text-version" value="0.0.2" date-time="2022-12-14T15:41:26.655Z" user="line-tofte">Auto (update-publication-status)</note>
             </notesStmt>
         </fileDesc>
     </teiHeader>
