--- a/translations/kangyur/placeholders/061-008_toh188-the_sutra_of_the_prophecy_by_dipamkara.xml
+++ b/translations/kangyur/placeholders/061-008_toh188-the_sutra_of_the_prophecy_by_dipamkara.xml
@@ -12,11 +12,11 @@
                 <author role="translatorMain" ref="contributors.xml#team-27"/>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.2 <date>2019</date>
+                <edition>v 0.0.3 <date>2019</date>
                 </edition>
             </editionStmt>
 
-            <publicationStmt status="3">
+            <publicationStmt status="2.h">
                 <idno xml:id="UT22084-061-008"/>
                 <date/>
             </publicationStmt>
@@ -32,10 +32,10 @@
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated" date-time="2019-12-20T13:00:59.901Z" user="admin">20/12/2019 13:00:59</note>
+                <note type="lastUpdated" date-time="2022-12-14T15:51:50.064Z" user="admin">14/12/2022 15:51:50</note>
             
 <note type="updated" update="text-version" value="v 0.0.1" date-time="2019-12-20T12:56:48.575Z" user="admin">Automated version increment</note>
-    <note type="updated" update="text-version" value="0.0.2" date-time="2020-10-28T19:21:21.935Z" user="john">0.0.2</note>
+    <note type="updated" update="text-version" value="0.0.2" date-time="2020-10-28T19:21:21.935Z" user="john">0.0.2</note>    <note type="updated" update="translation-status" value="2.h" date-time="2022-12-14T15:51:44.284Z" user="line-tofte">2.h</note>    <note type="updated" update="text-version" value="0.0.3" date-time="2022-12-14T15:51:44.284Z" user="line-tofte">Auto (update-publication-status)</note>
             </notesStmt>
         </fileDesc>
     </teiHeader>
