--- a/translations/kangyur/placeholders/091-017_toh620,1018-the_sutra_for_assuaging_eye_disease.xml
+++ b/translations/kangyur/placeholders/091-017_toh620,1018-the_sutra_for_assuaging_eye_disease.xml
@@ -12,16 +12,20 @@
                 <title type="otherTitle" xml:lang="Bo-Ltn">'phags pa mig nad rab tu zhi bar byed pa'i mdo/</title>
                 <title type="otherTitle" xml:lang="Sa-Ltn">āryākṣirogapraśamanasūtra</title>
             </titleStmt>
-            <publicationStmt status="">
+            <editionStmt>
+                <edition>v 0.0.1 <date>2022</date>
+                </edition>
+            </editionStmt>
+            <publicationStmt status="3">
                 <idno xml:id="UT22084-091-017"/>
+                <date/>
             </publicationStmt>
             <sourceDesc>
                 <bibl key="toh620" type="text">
                     <ref>Toh 620</ref>
                     <biblScope>vol.91, ff.60v-61r(pp.120-122)</biblScope>
-                    <location count-pages="2">
-                        <start volume="91" page="122"/>
-                        <end volume="91" page="123"/>
+                    <location work="UT4CZ5369" count-pages="2">
+                        <volume number="91" start-page="120" end-page="121"/>
                     </location>
                     <idno parent-id="O1JC114941JC21415" work="http://read.84000.co/sections"/>
                     <idno source-id="O1JC114941JC12354" work="W22084"/>
@@ -29,16 +33,15 @@
                 <bibl key="toh1018" type="text">
                     <ref>Toh 1018</ref>
                     <biblScope>vol.101, ff.181r-181v(pp.361-362)</biblScope>
-                    <location count-pages="2">
-                        <start volume="101" page="363"/>
-                        <end volume="101" page="364"/>
+                    <location work="UT4CZ5369" count-pages="2">
+                        <volume number="101" start-page="361" end-page="362"/>
                     </location>
                     <idno parent-id="O1JC114941JC20568" work="http://read.84000.co/sections"/>
                     <idno source-id="O1JC114941JC12781" work="W22084"/>
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated">Last updated at 23/01/2019 at 09:07:46 by admin</note>
+                <note type="lastUpdated" date-time="2022-12-15T14:05:31.108Z" user="admin">15/12/2022 14:05:31</note>    <note type="updated" update="translation-status" value="3" date-time="2022-12-15T14:05:26.737Z" user="line-tofte">3</note>    <note type="updated" update="text-version" value="0.0.1" date-time="2022-12-15T14:05:26.737Z" user="line-tofte">0.0.1</note>
             </notesStmt>
         </fileDesc>
     </teiHeader>
