--- a/translations/kangyur/placeholders/091-018_toh621,1020-the_sutra_for_assuaging_hemorrhoids.xml
+++ b/translations/kangyur/placeholders/091-018_toh621,1020-the_sutra_for_assuaging_hemorrhoids.xml
@@ -4,16 +4,16 @@
     <teiHeader>
         <fileDesc>
             <titleStmt>
-                <title type="mainTitle" xml:lang="Bo-Ltn">gzhang 'brum rab tu zhi bar byed pa'i mdo/</title>
-                <title type="mainTitle" xml:lang="Sa-Ltn">arśapraśamanasūtra</title>
                 <title type="mainTitle" xml:lang="en">The Sūtra for Assuaging Hemorrhoids</title>
-                <title type="otherTitle" xml:lang="Bo-Ltn">'phags pa gzhang 'brum rab tu zhi bar byed pa'i mdo/</title>
+                <title type="mainTitle" xml:lang="Sa-Ltn">arśapraśamanasūtra</title>
+                <title type="mainTitle" xml:lang="Bo-Ltn">gzhang 'brum rab tu zhi bar byed pa'i mdo/</title>
                 <title type="otherTitle" xml:lang="Sa-Ltn">āryārśapraśamanasūtra</title>
                 <title type="otherTitle" xml:lang="Bo-Ltn">'phags pa gzhang 'brum rab tu zhi bar byed pa'i mdo/</title>
-                <title type="otherTitle" xml:lang="Sa-Ltn">āryārśapraśamanasūtra</title>
+                <author role="translatorMain" ref="eft:team-40"/>
+                <author role="translatorEng" ref="eft:person-74">Ryan Damron</author>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.1 <date>2022</date>
+                <edition>v 0.0.2 <date>2022</date>
                 </edition>
             </editionStmt>
             <publicationStmt status="3">
@@ -41,7 +41,10 @@
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated" date-time="2022-12-15T14:06:50.83Z" user="admin">15/12/2022 14:06:50</note>    <note type="updated" update="translation-status" value="3" date-time="2022-12-15T14:06:46.455Z" user="line-tofte">3</note>    <note type="updated" update="text-version" value="0.0.1" date-time="2022-12-15T14:06:46.455Z" user="line-tofte">0.0.1</note>
+                <note type="lastUpdated" date-time="2022-12-15T14:07:21.844Z" user="admin">15/12/2022 14:07:21</note>
+                <note type="updated" update="translation-status" value="3" date-time="2022-12-15T14:06:46.455Z" user="line-tofte">3</note>
+                <note type="updated" update="text-version" value="0.0.1" date-time="2022-12-15T14:06:46.455Z" user="line-tofte">0.0.1</note>
+                <note type="updated" update="text-version" value="0.0.2" date-time="2022-12-15T14:07:20.341Z" user="line-tofte">Auto (update-contributors)</note>
             </notesStmt>
         </fileDesc>
     </teiHeader>
