--- a/translations/kangyur/placeholders/091-019_toh622,1014-the_incantation_for_assuaging_all_illnesses.xml
+++ b/translations/kangyur/placeholders/091-019_toh622,1014-the_incantation_for_assuaging_all_illnesses.xml
@@ -6,22 +6,26 @@
             <titleStmt>
                 <title type="mainTitle" xml:lang="Bo-Ltn">nad thams cad rab tu zhi byed gzungs/</title>
                 <title type="mainTitle" xml:lang="Sa-Ltn">sarvarogapraśamanī dhāraṇī</title>
-                <title type="mainTitle" xml:lang="en">The Incantation for Assuaging All Illnesses</title>
+                <title type="mainTitle" xml:lang="en">The Dhāraṇī for Assuaging All Illnesses</title>
                 <title type="otherTitle" xml:lang="Bo-Ltn">'phags pa nad thams cad rab tu zhi bar byed pa'i gzungs/</title>
                 <title type="otherTitle" xml:lang="Sa-Ltn">āryasarvarogapraśamanīnāmadhāraṇī</title>
                 <title type="otherTitle" xml:lang="Bo-Ltn">'phags pa nad thams cad rab tu zhi bar byed pa zhes bya ba'i gzungs/</title>
                 <title type="otherTitle" xml:lang="Sa-Ltn">āryasarvarogapraśamanīnāmadhāraṇī</title>
             </titleStmt>
-            <publicationStmt status="">
+            <editionStmt>
+                <edition>v 0.0.1 <date>2022</date>
+                </edition>
+            </editionStmt>
+            <publicationStmt status="3">
                 <idno xml:id="UT22084-091-019"/>
+                <date/>
             </publicationStmt>
             <sourceDesc>
                 <bibl key="toh622" type="text">
                     <ref>Toh 622</ref>
                     <biblScope>vol.91, ff.62r-62r(pp.123-123)</biblScope>
-                    <location count-pages="1">
-                        <start volume="91" page="125"/>
-                        <end volume="91" page="125"/>
+                    <location work="UT4CZ5369" count-pages="1">
+                        <volume number="91" start-page="123" end-page="123"/>
                     </location>
                     <idno parent-id="O1JC114941JC21415" work="http://read.84000.co/sections"/>
                     <idno source-id="O1JC114941JC12356" work="W22084"/>
@@ -29,16 +33,15 @@
                 <bibl key="toh1014" type="text">
                     <ref>Toh 1014</ref>
                     <biblScope>vol.101, ff.180r-180v(pp.359-360)</biblScope>
-                    <location count-pages="2">
-                        <start volume="101" page="361"/>
-                        <end volume="101" page="362"/>
+                    <location work="UT4CZ5369" count-pages="2">
+                        <volume number="101" start-page="359" end-page="360"/>
                     </location>
                     <idno parent-id="O1JC114941JC20568" work="http://read.84000.co/sections"/>
                     <idno source-id="O1JC114941JC12777" work="W22084"/>
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated">Last updated at 23/01/2019 at 09:07:42 by admin</note>
+                <note type="lastUpdated" date-time="2022-12-15T14:08:18.177Z" user="admin">15/12/2022 14:08:18</note>    <note type="updated" update="translation-status" value="3" date-time="2022-12-15T14:08:13.818Z" user="line-tofte">3</note>    <note type="updated" update="text-version" value="0.0.1" date-time="2022-12-15T14:08:13.818Z" user="line-tofte">0.0.1</note>
             </notesStmt>
         </fileDesc>
     </teiHeader>
