--- a/translations/kangyur/placeholders/091-021_toh624,1017-the_incantation_for_assuaging_epidemic_fevers.xml
+++ b/translations/kangyur/placeholders/091-021_toh624,1017-the_incantation_for_assuaging_epidemic_fevers.xml
@@ -6,18 +6,22 @@
             <titleStmt>
                 <title type="mainTitle" xml:lang="Bo-Ltn">rims nad zhi ba'i gzungs/</title>
                 <title type="mainTitle" xml:lang="Sa-Ltn">[no Sanskrit title]</title>
-                <title type="mainTitle" xml:lang="en">The Incantation for Assuaging Epidemic Fevers</title>
+                <title type="mainTitle" xml:lang="en">The Dhāraṇī for Assuaging Epidemic Fevers</title>
             </titleStmt>
-            <publicationStmt status="">
+            <editionStmt>
+                <edition>v 0.0.1 <date>2022</date>
+                </edition>
+            </editionStmt>
+            <publicationStmt status="3">
                 <idno xml:id="UT22084-091-021"/>
+                <date/>
             </publicationStmt>
             <sourceDesc>
                 <bibl key="toh624" type="text">
                     <ref>Toh 624</ref>
                     <biblScope>vol.91, ff.62v-62v(pp.124-124)</biblScope>
-                    <location count-pages="1">
-                        <start volume="91" page="126"/>
-                        <end volume="91" page="126"/>
+                    <location work="UT4CZ5369" count-pages="1">
+                        <volume number="91" start-page="124" end-page="124"/>
                     </location>
                     <idno parent-id="O1JC114941JC21415" work="http://read.84000.co/sections"/>
                     <idno source-id="O1JC114941JC12358" work="W22084"/>
@@ -25,16 +29,15 @@
                 <bibl key="toh1017" type="text">
                     <ref>Toh 1017</ref>
                     <biblScope>vol.101, ff.181r-181r(pp.361-361)</biblScope>
-                    <location count-pages="1">
-                        <start volume="101" page="363"/>
-                        <end volume="101" page="363"/>
+                    <location work="UT4CZ5369" count-pages="1">
+                        <volume number="101" start-page="361" end-page="361"/>
                     </location>
                     <idno parent-id="O1JC114941JC20568" work="http://read.84000.co/sections"/>
                     <idno source-id="O1JC114941JC12780" work="W22084"/>
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated">Last updated at 23/01/2019 at 09:07:45 by admin</note>
+                <note type="lastUpdated" date-time="2022-12-15T14:13:51.681Z" user="admin">15/12/2022 14:13:51</note>    <note type="updated" update="translation-status" value="3" date-time="2022-12-15T14:13:47.303Z" user="line-tofte">3</note>    <note type="updated" update="text-version" value="0.0.1" date-time="2022-12-15T14:13:47.303Z" user="line-tofte">0.0.1</note>
             </notesStmt>
         </fileDesc>
     </teiHeader>
