--- a/translations/kangyur/placeholders/091-022_toh625,1016-the_incantation_for_assuaging_epidemic_fevers.xml
+++ b/translations/kangyur/placeholders/091-022_toh625,1016-the_incantation_for_assuaging_epidemic_fevers.xml
@@ -4,17 +4,17 @@
     <teiHeader>
         <fileDesc>
             <titleStmt>
-                <title type="mainTitle" xml:lang="Bo-Ltn">rims nad rab tu zhi byed kyi gzungs/</title>
-                <title type="mainTitle" xml:lang="Sa-Ltn">jvarapraśamanī dhāraṇī</title>
                 <title type="mainTitle" xml:lang="en">The Dhāraṇī for Assuaging Epidemic Fevers</title>
-                <title type="otherTitle" xml:lang="Bo-Ltn">'phags pa rims nad rab tu zhi bar byed pa zhes bya ba'i gzungs/</title>
+                <title type="mainTitle" xml:lang="Sa-Ltn">jvarapraśamanī dhāraṇī</title>
+                <title type="mainTitle" xml:lang="Bo-Ltn">rims nad rab tu zhi byed kyi gzungs/</title>
                 <title type="otherTitle" xml:lang="Sa-Ltn">āryajvarapraśamanīnāmadhāraṇī</title>
                 <title type="otherTitle" xml:lang="Bo-Ltn">rims nad rab tu zhi bar byed pa'i gzungs/</title>
                 <title type="otherTitle" xml:lang="Bo-Ltn">'phags pa rims nad rab tu zhi bar byed pa zhes bya ba'i gzungs/</title>
-                <title type="otherTitle" xml:lang="Sa-Ltn">āryajvarapraśamanīnāmadhāraṇī</title>
+                <author role="translatorMain" ref="eft:team-40"/>
+                <author role="translatorEng" ref="eft:person-74">Ryan Damron</author>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.1 <date>2022</date>
+                <edition>v 0.0.2 <date>2022</date>
                 </edition>
             </editionStmt>
             <publicationStmt status="3">
@@ -42,7 +42,10 @@
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated" date-time="2022-12-15T14:15:04.536Z" user="admin">15/12/2022 14:15:04</note>    <note type="updated" update="translation-status" value="3" date-time="2022-12-15T14:15:00.175Z" user="line-tofte">3</note>    <note type="updated" update="text-version" value="0.0.1" date-time="2022-12-15T14:15:00.175Z" user="line-tofte">0.0.1</note>
+                <note type="lastUpdated" date-time="2022-12-15T14:15:33.086Z" user="admin">15/12/2022 14:15:33</note>
+                <note type="updated" update="translation-status" value="3" date-time="2022-12-15T14:15:00.175Z" user="line-tofte">3</note>
+                <note type="updated" update="text-version" value="0.0.1" date-time="2022-12-15T14:15:00.175Z" user="line-tofte">0.0.1</note>
+                <note type="updated" update="text-version" value="0.0.2" date-time="2022-12-15T14:15:31.583Z" user="line-tofte">Auto (update-contributors)</note>
             </notesStmt>
         </fileDesc>
     </teiHeader>
