--- a/translations/kangyur/placeholders/094-012_toh735,994-the_sutra_of_parnasabari.xml
+++ b/translations/kangyur/placeholders/094-012_toh735,994-the_sutra_of_parnasabari.xml
@@ -10,16 +10,20 @@
                 <title type="otherTitle" xml:lang="Bo-Ltn">'phags pa par+Na+Na sha ba ri'i mdo/</title>
                 <title type="otherTitle" xml:lang="Bo-Ltn">'phags pa par+Na sha ba ri'i mdo/</title>
             </titleStmt>
-            <publicationStmt status="">
+            <editionStmt>
+                <edition>v 0.0.1 <date>2022</date>
+                </edition>
+            </editionStmt>
+            <publicationStmt status="3">
                 <idno xml:id="UT22084-094-012"/>
+                <date/>
             </publicationStmt>
             <sourceDesc>
                 <bibl key="toh735" type="text">
                     <ref>Toh 735</ref>
                     <biblScope>vol.94, ff.227r-228r(pp.453-455)</biblScope>
-                    <location count-pages="3">
-                        <start volume="94" page="455"/>
-                        <end volume="94" page="457"/>
+                    <location work="UT4CZ5369" count-pages="3">
+                        <volume number="94" start-page="453" end-page="455"/>
                     </location>
                     <idno parent-id="O1JC114941JC21415" work="http://read.84000.co/sections"/>
                     <idno source-id="O1JC114941JC12476" work="W22084"/>
@@ -27,16 +31,15 @@
                 <bibl key="toh994" type="text">
                     <ref>Toh 994</ref>
                     <biblScope>vol.101, ff.148r-149r(pp.295-297)</biblScope>
-                    <location count-pages="3">
-                        <start volume="101" page="297"/>
-                        <end volume="101" page="299"/>
+                    <location work="UT4CZ5369" count-pages="3">
+                        <volume number="101" start-page="295" end-page="297"/>
                     </location>
                     <idno parent-id="O1JC114941JC20568" work="http://read.84000.co/sections"/>
                     <idno source-id="O1JC114941JC12757" work="W22084"/>
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated">Last updated at 23/01/2019 at 09:07:20 by admin</note>
+                <note type="lastUpdated" date-time="2022-12-15T14:17:43.08Z" user="admin">15/12/2022 14:17:43</note>    <note type="updated" update="translation-status" value="3" date-time="2022-12-15T14:17:38.704Z" user="line-tofte">3</note>    <note type="updated" update="text-version" value="0.0.1" date-time="2022-12-15T14:17:38.704Z" user="line-tofte">0.0.1</note>
             </notesStmt>
         </fileDesc>
     </teiHeader>
