--- a/translations/kangyur/placeholders/096-050_toh801,1057-the_incantation_that_dispels_phlegm_diseases.xml
+++ b/translations/kangyur/placeholders/096-050_toh801,1057-the_incantation_that_dispels_phlegm_diseases.xml
@@ -4,14 +4,15 @@
     <teiHeader>
         <fileDesc>
             <titleStmt>
-                <title type="mainTitle" xml:lang="Bo-Ltn">bad kan sel ba'i gzungs/</title>
-                <title type="mainTitle" xml:lang="Sa-Ltn">[no Sanskrit title]</title>
                 <title type="mainTitle" xml:lang="en">The Dhāraṇī that Dispels Phlegm Diseases</title>
+                <title type="mainTitle" xml:lang="Sa-Ltn">[no Sanskrit title]</title>
+                <title type="mainTitle" xml:lang="Bo-Ltn">bad kan sel ba'i gzungs/</title>
                 <title type="otherTitle" xml:lang="Bo-Ltn">bad kan gyi nad sel ba'i gzungs sngags/</title>
-                <title type="otherTitle" xml:lang="Bo-Ltn">bad kan gyi nad sel ba'i gzungs sngags/</title>
+                <author role="translatorMain" ref="eft:team-40"/>
+                <author role="translatorEng" ref="eft:person-74">Ryan Damron</author>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.1 <date>2022</date>
+                <edition>v 0.0.2 <date>2022</date>
                 </edition>
             </editionStmt>
             <publicationStmt status="3">
@@ -39,7 +40,10 @@
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated" date-time="2022-12-15T14:26:52.497Z" user="admin">15/12/2022 14:26:52</note>    <note type="updated" update="translation-status" value="3" date-time="2022-12-15T14:26:48.137Z" user="line-tofte">3</note>    <note type="updated" update="text-version" value="0.0.1" date-time="2022-12-15T14:26:48.137Z" user="line-tofte">0.0.1</note>
+                <note type="lastUpdated" date-time="2022-12-15T14:27:29.474Z" user="admin">15/12/2022 14:27:29</note>
+                <note type="updated" update="translation-status" value="3" date-time="2022-12-15T14:26:48.137Z" user="line-tofte">3</note>
+                <note type="updated" update="text-version" value="0.0.1" date-time="2022-12-15T14:26:48.137Z" user="line-tofte">0.0.1</note>
+                <note type="updated" update="text-version" value="0.0.2" date-time="2022-12-15T14:27:27.955Z" user="line-tofte">Auto (update-contributors)</note>
             </notesStmt>
         </fileDesc>
     </teiHeader>
