--- a/translations/kangyur/placeholders/039-004_toh48-the_discourse_on_dreams.xml
+++ b/translations/kangyur/placeholders/039-004_toh48-the_discourse_on_dreams.xml
@@ -18,10 +18,11 @@
                 <consultant role="advisor" ref="eft:person-211">Gareth Sparham</consultant>
                 <author role="translatorEng" ref="eft:person-212">Ben Wood</author>
                 <author role="translatorEng" ref="eft:person-210">Khenpo Kunga Sherab</author>
+                <editor role="projectEditor" ref="eft:person-74">Ryan Damron</editor>
                 <sponsor ref="eft:sponsor-221">Cosmo Namkha Namgyal Sucharitakul with Kuhn Sucharitakul and Pema Choeden Namgyal Abrahams</sponsor>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.15 <date>2019</date>
+                <edition>v 0.0.16 <date>2019</date>
                 </edition>
             </editionStmt>
             <publicationStmt status="2.f">
@@ -40,7 +41,7 @@
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated" date-time="2022-12-16T07:59:28.337Z" user="admin">16/12/2022 07:59:28</note>
+                <note type="lastUpdated" date-time="2022-12-16T08:00:33.503Z" user="admin">16/12/2022 08:00:33</note>
                 <note type="updated" update="text-version" value="v 0.0.1" date-time="2019-12-20T12:56:48.575Z" user="admin">Automated version increment</note>
                 <note type="updated" update="text-version" value="0.0.2" date-time="2021-04-15T10:59:45.927Z" user="line-tofte">Auto (update-contributors)</note>
                 <note type="updated" update="text-version" value="0.0.3" date-time="2021-04-15T11:00:45.643Z" user="line-tofte">Auto (update-contributors)</note>
@@ -57,6 +58,7 @@
                 <note type="updated" update="text-version" value="0.0.14" date-time="2022-10-25T03:58:22.609Z" user="cabie-sim">Auto (update-sponsorship)</note>
                 <note type="updated" update="translation-status" value="2.f" date-time="2022-12-16T07:59:22.509Z" user="line-tofte">2.f</note>
                 <note type="updated" update="text-version" value="0.0.15" date-time="2022-12-16T07:59:22.509Z" user="line-tofte">Auto (update-publication-status)</note>
+                <note type="updated" update="text-version" value="0.0.16" date-time="2022-12-16T08:00:27.695Z" user="line-tofte">Auto (update-contributors)</note>
             </notesStmt>
         </fileDesc>
     </teiHeader>
