--- a/translations/kangyur/placeholders/082-002_toh451-the_tantra_of_the_ornament_of_the_vajra_essence.xml
+++ b/translations/kangyur/placeholders/082-002_toh451-the_tantra_of_the_ornament_of_the_vajra_essence.xml
@@ -11,12 +11,12 @@
                 <title type="otherTitle" xml:lang="Sa-Ltn">śrīvajrahṛdayālaṃkāratantranāma</title>
             </titleStmt>
     <editionStmt>
-                <edition>0.0.2 <date>2020</date>
+                <edition>v 0.0.3 <date>2020</date>
                 </edition>
             </editionStmt>
-            <publicationStmt status="">
+            <publicationStmt status="3">
                 <idno xml:id="UT22084-082-002"/>
-    <date/>
+                <date/>
             </publicationStmt>
             <sourceDesc>
                 <bibl key="toh451" type="text">
@@ -30,9 +30,9 @@
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated" date-time="2020-06-09T17:11:50.574Z" user="admin">09/06/2020 17:11:50</note>
+                <note type="lastUpdated" date-time="2022-12-16T09:10:39.555Z" user="admin">16/12/2022 09:10:39</note>
     <note type="updated" update="text-version" value="0.0.2" date-time="2020-06-09T17:11:47.224Z" user="john">Text note added</note>
-    <note type="updated" update="publication-date" value="" date-time="2020-06-09T17:11:47.224Z" user="john">Text note added</note>
+    <note type="updated" update="publication-date" value="" date-time="2020-06-09T17:11:47.224Z" user="john">Text note added</note>    <note type="updated" update="translation-status" value="3" date-time="2022-12-16T09:10:35.186Z" user="line-tofte">3</note>    <note type="updated" update="text-version" value="0.0.3" date-time="2022-12-16T09:10:35.186Z" user="line-tofte">Auto (update-publication-status)</note>
             </notesStmt>
         </fileDesc>
     </teiHeader>
