--- a/translations/kangyur/placeholders/082-002_toh451-the_tantra_of_the_ornament_of_the_vajra_essence.xml
+++ b/translations/kangyur/placeholders/082-002_toh451-the_tantra_of_the_ornament_of_the_vajra_essence.xml
@@ -4,14 +4,16 @@
     <teiHeader>
         <fileDesc>
             <titleStmt>
-                <title type="mainTitle" xml:lang="Bo-Ltn">rdo rje snying po rgyan gyi rgyud/</title>
-                <title type="mainTitle" xml:lang="Sa-Ltn">vajrahṛdayālaṃkāratantra</title>
                 <title type="mainTitle" xml:lang="en">The Tantra of the Ornament of the Vajra Essence</title>
-                <title type="otherTitle" xml:lang="Bo-Ltn">dpal rdo rje snying po rgyan gyi rgyud ces bya ba</title>
+                <title type="mainTitle" xml:lang="Sa-Ltn">vajrahṛdayālaṃkāratantra</title>
+                <title type="mainTitle" xml:lang="Bo-Ltn">rdo rje snying po rgyan gyi rgyud/</title>
                 <title type="otherTitle" xml:lang="Sa-Ltn">śrīvajrahṛdayālaṃkāratantranāma</title>
+                <title type="otherTitle" xml:lang="Bo-Ltn">dpal rdo rje snying po rgyan gyi rgyud ces bya ba</title>
+                <author role="translatorMain" ref="eft:team-55"/>
+                <author role="translatorEng" ref="eft:person-274">Adam Krug</author>
             </titleStmt>
     <editionStmt>
-                <edition>v 0.0.3 <date>2020</date>
+                <edition>v 0.0.4 <date>2020</date>
                 </edition>
             </editionStmt>
             <publicationStmt status="3">
@@ -30,9 +32,12 @@
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated" date-time="2022-12-16T09:10:39.555Z" user="admin">16/12/2022 09:10:39</note>
-    <note type="updated" update="text-version" value="0.0.2" date-time="2020-06-09T17:11:47.224Z" user="john">Text note added</note>
-    <note type="updated" update="publication-date" value="" date-time="2020-06-09T17:11:47.224Z" user="john">Text note added</note>    <note type="updated" update="translation-status" value="3" date-time="2022-12-16T09:10:35.186Z" user="line-tofte">3</note>    <note type="updated" update="text-version" value="0.0.3" date-time="2022-12-16T09:10:35.186Z" user="line-tofte">Auto (update-publication-status)</note>
+                <note type="lastUpdated" date-time="2022-12-16T09:11:06.225Z" user="admin">16/12/2022 09:11:06</note>
+                <note type="updated" update="text-version" value="0.0.2" date-time="2020-06-09T17:11:47.224Z" user="john">Text note added</note>
+                <note type="updated" update="publication-date" value="" date-time="2020-06-09T17:11:47.224Z" user="john">Text note added</note>
+                <note type="updated" update="translation-status" value="3" date-time="2022-12-16T09:10:35.186Z" user="line-tofte">3</note>
+                <note type="updated" update="text-version" value="0.0.3" date-time="2022-12-16T09:10:35.186Z" user="line-tofte">Auto (update-publication-status)</note>
+                <note type="updated" update="text-version" value="0.0.4" date-time="2022-12-16T09:11:00.455Z" user="line-tofte">Auto (update-contributors)</note>
             </notesStmt>
         </fileDesc>
     </teiHeader>
